{
    "name": "InputAssets",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "bdbc08c4-67a7-4327-a1bb-ae91284b3c08",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "fc53842b-9703-4d8a-b222-6699318ba8b7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StartTouch",
                    "type": "Value",
                    "id": "ba77a2fb-be88-413d-b7fb-85fb24027623",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HoldTouch",
                    "type": "Button",
                    "id": "2d3bb7ab-06a5-4f17-863c-86fe2aa28d8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b7cd5be-3e54-418b-9274-a6fa14a94dbc",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c020325f-7b90-4f04-bb7d-f14bcf59a63c",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99de8cc4-bdf4-450c-80e3-222f53dfcdf5",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}